--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "./node_modules/mocha/bin/_mocha"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -14,7 +14,8 @@
     "express": "~4.13.4",
     "express-session": "^1.14.0",
     "morgan": "~1.7.0",
-    "nunjucks": "^2.4.2"
+    "nunjucks": "^2.4.2",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
